# Canary

./: .gitignore  LICENSE  MANIFEST.in  Pipfile  README.md  canary.py  index.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-unit-tests.yml
canary/: Arguments.txt  SADFace.py  SADFaceExample.json  __init__.py  _version.py  application.py  argumentation.py  canary.json  canary.py  canaryLib.py  canarySADFace.json  canaryTest.csv  canaryTest.py  corpora.py  download.py  indicators.json  indicatorsTest.py  preprocesser.py  preprocessing.py  relations.py  sadface.json  stopwords.json  utils.py  version.py
canary.egg-info/: PKG-INFO  SOURCES.txt
canary/_data/: corpora.json  indicators.py
canary/argument_detection/: classification.py
canary/argument_pipeline/: ForAgainst.py  __init__.py  _utils.py  argument_segmentation.py  argument_segmenter.py  base.py  binary_detection.py  classification.py  component_identification.py  component_prediction.py  evidence_detection.py  link_predictor.py  model.py  scheme_prediction.py  structure_prediction.py
canary/corpora/: __init__.py  _essay_corpus.py  araucaria.py  essay_corpus.py
canary/data/: corpora.json  indicators.py
canary/etc/: canary.cfg
canary/nlp/: __init__.py  transformers.py
canary/output/: brat.csv  (+21 more)
data/: corpora.json
docs/: requirements.txt
etc/: canary.cfg
templates/: 404.html  application.html  home.html  index.html  input.html  tutorial.html
tests/: Corpora.py  __init__.py  argument_pipeline.py  test___download__.py  test_argument_pipeline.py  test_canary.py  test_corpora.py
(+78 files in other folders)
