[metadata]
name = canary-am
version = 0.0.1
author = Open Argumentation PLatform
author_email = s.wells@napier.ac.uk
python_requires = >=3.8
description = A Simple Argument Mining Library
keywords = Argument Mining, Argumentation, Natural Language Processing, NLP, Machine Learning
license = MIT
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Artificial Intelligence
url = https://openargumentation.org
project_urls =
    Source = https://github.com/chriswales95/Canary

[options]
zip_safe = False
include_package_data = True
install_requires =
    requests
    scikit-learn
    sklearn_crfsuite
    nltk
    vaderSentiment
    spacy
    pandas
    benepar
    sadface
    pybrat
    joblib
    imbalanced-learn
